// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin Layout has coupons 1`] = `
<div>
  <div
    class="makeStyles-wrapper-1"
  >
    <div>
      <div
        class="PrivateHiddenCss-mdUp-33"
      />
      <div
        class="PrivateHiddenCss-smDown-31"
      >
        <div
          class="MuiDrawer-root MuiDrawer-docked"
        >
          <div
            class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-7 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          >
            <div
              class="makeStyles-logo-8"
            >
              <a
                class="makeStyles-logoLink-10"
                href=""
                target="_blank"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                  >
                    <span
                      class="makeStyles-logoText-9"
                      data-testid="brand"
                    >
                      Master
                    </span>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="makeStyles-sidebarWrapper-21"
            >
              <nav
                class="MuiList-root MuiList-padding"
              >
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-dashboard"
                    >
                      Dashboard
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-products"
                    >
                      Products
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root makeStyles-itemLinkActive-17 MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-shop"
                    >
                      Shop
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiCollapse-root"
                  style="min-height: 0px; height: 0px; transition-duration: 0ms;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiList-root makeStyles-listSub-23"
                      >
                        <a
                          class="makeStyles-listItemSub-24"
                          href="/shipping"
                        >
                          <div
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiListItemIcon-root makeStyles-itemIcon-18"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 17l5-5-5-5v10z"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiListItemText-root"
                            >
                              <p
                                class="MuiTypography-root makeStyles-listItemSub-24 MuiTypography-body1"
                                data-testid="submenu-shipping"
                              >
                                Shipping
                              </p>
                            </div>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </div>
                        </a>
                        <a
                          class="makeStyles-listItemSub-24"
                          href="/coupons"
                        >
                          <div
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiListItemIcon-root makeStyles-itemIcon-18"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 17l5-5-5-5v10z"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiListItemText-root"
                            >
                              <p
                                class="MuiTypography-root makeStyles-listItemSub-24 MuiTypography-body1"
                                data-testid="submenu-coupons"
                              >
                                Coupons
                              </p>
                            </div>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </div>
                        </a>
                        <a
                          class="makeStyles-listItemSub-24"
                          href="/orders"
                        >
                          <div
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiListItemIcon-root makeStyles-itemIcon-18"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 17l5-5-5-5v10z"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiListItemText-root"
                            >
                              <p
                                class="MuiTypography-root makeStyles-listItemSub-24 MuiTypography-body1"
                                data-testid="submenu-orders"
                              >
                                Orders
                              </p>
                            </div>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </div>
                        </a>
                        <a
                          class="makeStyles-listItemSub-24"
                          href="/customers"
                        >
                          <div
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiListItemIcon-root makeStyles-itemIcon-18"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 17l5-5-5-5v10z"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiListItemText-root"
                            >
                              <p
                                class="MuiTypography-root makeStyles-listItemSub-24 MuiTypography-body1"
                                data-testid="submenu-customers"
                              >
                                Customers
                              </p>
                            </div>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-pages"
                    >
                      Pages
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 17l5-5-5-5v10z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-users"
                    >
                      Users
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.01 7L16 3h-2v4h-4V3H8v4h-.01C7 6.99 6 7.99 6 8.99v5.49L9.5 18v3h5v-3l3.5-3.51v-5.5c0-1-1-2-1.99-1.99z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-plugins"
                    >
                      Plugins
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-mainPanel-2"
    >
      <header
        class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-41 mui-fixed MuiPaper-elevation4"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular makeStyles-container-42 MuiToolbar-gutters"
        >
          <div
            class="makeStyles-flex-43"
          >
            <h1
              class="MuiTypography-root makeStyles-title-44 MuiTypography-h1 MuiTypography-colorInherit"
            />
          </div>
          <div
            class="PrivateHiddenCss-smDown-31"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-45"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-avatarButton-46"
                >
                  <img
                    alt="Yo"
                    class="MuiAvatar-img"
                    src="/broken-image.jpg"
                  />
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="PrivateHiddenCss-mdUp-33"
          >
            <button
              aria-label="open drawer"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </header>
      <div
        class="makeStyles-content-3"
      >
        <div
          class="makeStyles-container-4"
        >
          <div
            class="makeStyles-content-3"
          >
            <div
              class="makeStyles-container-4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Admin Layout has dashboard 1`] = `
<div>
  <div
    class="makeStyles-wrapper-1"
  >
    <div>
      <div
        class="PrivateHiddenCss-mdUp-33"
      />
      <div
        class="PrivateHiddenCss-smDown-31"
      >
        <div
          class="MuiDrawer-root MuiDrawer-docked"
        >
          <div
            class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-7 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          >
            <div
              class="makeStyles-logo-8"
            >
              <a
                class="makeStyles-logoLink-10"
                href=""
                target="_blank"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                  >
                    <span
                      class="makeStyles-logoText-9"
                      data-testid="brand"
                    >
                      Master
                    </span>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="makeStyles-sidebarWrapper-21"
            >
              <nav
                class="MuiList-root MuiList-padding"
              >
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-dashboard"
                    >
                      Dashboard
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-products"
                    >
                      Products
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-shop"
                    >
                      Shop
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-pages"
                    >
                      Pages
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 17l5-5-5-5v10z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-users"
                    >
                      Users
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.01 7L16 3h-2v4h-4V3H8v4h-.01C7 6.99 6 7.99 6 8.99v5.49L9.5 18v3h5v-3l3.5-3.51v-5.5c0-1-1-2-1.99-1.99z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-plugins"
                    >
                      Plugins
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-mainPanel-2"
    >
      <header
        class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-41 mui-fixed MuiPaper-elevation4"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular makeStyles-container-42 MuiToolbar-gutters"
        >
          <div
            class="makeStyles-flex-43"
          >
            <h1
              class="MuiTypography-root makeStyles-title-44 MuiTypography-h1 MuiTypography-colorInherit"
            />
          </div>
          <div
            class="PrivateHiddenCss-smDown-31"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-45"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-avatarButton-46"
                >
                  <img
                    alt="Yo"
                    class="MuiAvatar-img"
                    src="/broken-image.jpg"
                  />
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="PrivateHiddenCss-mdUp-33"
          >
            <button
              aria-label="open drawer"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </header>
      <div
        class="makeStyles-content-3"
      >
        <div
          class="makeStyles-container-4"
        >
          <div
            class="makeStyles-content-3"
          >
            <div
              class="makeStyles-container-4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Admin Layout has products 1`] = `
<div>
  <div
    class="makeStyles-wrapper-55"
  >
    <div>
      <div
        class="PrivateHiddenCss-mdUp-87"
      />
      <div
        class="PrivateHiddenCss-smDown-85"
      >
        <div
          class="MuiDrawer-root MuiDrawer-docked"
        >
          <div
            class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-61 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          >
            <div
              class="makeStyles-logo-62"
            >
              <a
                class="makeStyles-logoLink-64"
                href=""
                target="_blank"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                  >
                    <span
                      class="makeStyles-logoText-63"
                      data-testid="brand"
                    >
                      Master
                    </span>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="makeStyles-sidebarWrapper-75"
            >
              <nav
                class="MuiList-root MuiList-padding"
              >
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-72"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-76 MuiTypography-body1"
                      data-testid="menu-dashboard"
                    >
                      Dashboard
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-79"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-72"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-76 MuiTypography-body1"
                      data-testid="menu-products"
                    >
                      Products
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-79"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-72"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-76 MuiTypography-body1"
                      data-testid="menu-shop"
                    >
                      Shop
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-79"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-72"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-76 MuiTypography-body1"
                      data-testid="menu-pages"
                    >
                      Pages
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-79"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-72"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 17l5-5-5-5v10z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-76 MuiTypography-body1"
                      data-testid="menu-users"
                    >
                      Users
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-79"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-72"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.01 7L16 3h-2v4h-4V3H8v4h-.01C7 6.99 6 7.99 6 8.99v5.49L9.5 18v3h5v-3l3.5-3.51v-5.5c0-1-1-2-1.99-1.99z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-76 MuiTypography-body1"
                      data-testid="menu-plugins"
                    >
                      Plugins
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-79"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-mainPanel-56"
    >
      <header
        class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-95 mui-fixed MuiPaper-elevation4"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular makeStyles-container-96 MuiToolbar-gutters"
        >
          <div
            class="makeStyles-flex-97"
          >
            <h1
              class="MuiTypography-root makeStyles-title-98 MuiTypography-h1 MuiTypography-colorInherit"
            />
          </div>
          <div
            class="PrivateHiddenCss-smDown-85"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-99"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-avatarButton-100"
                >
                  <img
                    alt="Yo"
                    class="MuiAvatar-img"
                    src="/broken-image.jpg"
                  />
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="PrivateHiddenCss-mdUp-87"
          >
            <button
              aria-label="open drawer"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </header>
      <div
        class="makeStyles-content-57"
      >
        <div
          class="makeStyles-container-58"
        >
          <div
            class="makeStyles-content-57"
          >
            <div
              class="makeStyles-container-58"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Admin Layout has shipping 1`] = `
<div>
  <div
    class="makeStyles-wrapper-1"
  >
    <div>
      <div
        class="PrivateHiddenCss-mdUp-33"
      />
      <div
        class="PrivateHiddenCss-smDown-31"
      >
        <div
          class="MuiDrawer-root MuiDrawer-docked"
        >
          <div
            class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-7 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          >
            <div
              class="makeStyles-logo-8"
            >
              <a
                class="makeStyles-logoLink-10"
                href=""
                target="_blank"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                  >
                    <span
                      class="makeStyles-logoText-9"
                      data-testid="brand"
                    >
                      Master
                    </span>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="makeStyles-sidebarWrapper-21"
            >
              <nav
                class="MuiList-root MuiList-padding"
              >
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-dashboard"
                    >
                      Dashboard
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-products"
                    >
                      Products
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root makeStyles-itemLinkActive-17 MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-shop"
                    >
                      Shop
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 8l-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  class="MuiCollapse-root"
                  style="min-height: 0px; height: 0px; transition-duration: 0ms;"
                >
                  <div
                    class="MuiCollapse-wrapper"
                  >
                    <div
                      class="MuiCollapse-wrapperInner"
                    >
                      <div
                        class="MuiList-root makeStyles-listSub-23"
                      >
                        <a
                          class="makeStyles-listItemSub-24"
                          href="/shipping"
                        >
                          <div
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiListItemIcon-root makeStyles-itemIcon-18"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 17l5-5-5-5v10z"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiListItemText-root"
                            >
                              <p
                                class="MuiTypography-root makeStyles-listItemSub-24 MuiTypography-body1"
                                data-testid="submenu-shipping"
                              >
                                Shipping
                              </p>
                            </div>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </div>
                        </a>
                        <a
                          class="makeStyles-listItemSub-24"
                          href="/coupons"
                        >
                          <div
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiListItemIcon-root makeStyles-itemIcon-18"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 17l5-5-5-5v10z"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiListItemText-root"
                            >
                              <p
                                class="MuiTypography-root makeStyles-listItemSub-24 MuiTypography-body1"
                                data-testid="submenu-coupons"
                              >
                                Coupons
                              </p>
                            </div>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </div>
                        </a>
                        <a
                          class="makeStyles-listItemSub-24"
                          href="/orders"
                        >
                          <div
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiListItemIcon-root makeStyles-itemIcon-18"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 17l5-5-5-5v10z"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiListItemText-root"
                            >
                              <p
                                class="MuiTypography-root makeStyles-listItemSub-24 MuiTypography-body1"
                                data-testid="submenu-orders"
                              >
                                Orders
                              </p>
                            </div>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </div>
                        </a>
                        <a
                          class="makeStyles-listItemSub-24"
                          href="/customers"
                        >
                          <div
                            aria-disabled="false"
                            class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                            role="button"
                            tabindex="0"
                          >
                            <div
                              class="MuiListItemIcon-root makeStyles-itemIcon-18"
                            >
                              <svg
                                aria-hidden="true"
                                class="MuiSvgIcon-root"
                                focusable="false"
                                viewBox="0 0 24 24"
                              >
                                <path
                                  d="M10 17l5-5-5-5v10z"
                                />
                              </svg>
                            </div>
                            <div
                              class="MuiListItemText-root"
                            >
                              <p
                                class="MuiTypography-root makeStyles-listItemSub-24 MuiTypography-body1"
                                data-testid="submenu-customers"
                              >
                                Customers
                              </p>
                            </div>
                            <span
                              class="MuiTouchRipple-root"
                            />
                          </div>
                        </a>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-pages"
                    >
                      Pages
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 17l5-5-5-5v10z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-users"
                    >
                      Users
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-18"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.01 7L16 3h-2v4h-4V3H8v4h-.01C7 6.99 6 7.99 6 8.99v5.49L9.5 18v3h5v-3l3.5-3.51v-5.5c0-1-1-2-1.99-1.99z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-22 MuiTypography-body1"
                      data-testid="menu-plugins"
                    >
                      Plugins
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-25"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-mainPanel-2"
    >
      <header
        class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-41 mui-fixed MuiPaper-elevation4"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular makeStyles-container-42 MuiToolbar-gutters"
        >
          <div
            class="makeStyles-flex-43"
          >
            <h1
              class="MuiTypography-root makeStyles-title-44 MuiTypography-h1 MuiTypography-colorInherit"
            />
          </div>
          <div
            class="PrivateHiddenCss-smDown-31"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-45"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-avatarButton-46"
                >
                  <img
                    alt="Yo"
                    class="MuiAvatar-img"
                    src="/broken-image.jpg"
                  />
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="PrivateHiddenCss-mdUp-33"
          >
            <button
              aria-label="open drawer"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </header>
      <div
        class="makeStyles-content-3"
      >
        <div
          class="makeStyles-container-4"
        >
          <div
            class="makeStyles-content-3"
          >
            <div
              class="makeStyles-container-4"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Admin Layout has shop 1`] = `
<div>
  <div
    class="makeStyles-wrapper-109"
  >
    <div>
      <div
        class="PrivateHiddenCss-mdUp-141"
      />
      <div
        class="PrivateHiddenCss-smDown-139"
      >
        <div
          class="MuiDrawer-root MuiDrawer-docked"
        >
          <div
            class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-115 MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
          >
            <div
              class="makeStyles-logo-116"
            >
              <a
                class="makeStyles-logoLink-118"
                href=""
                target="_blank"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-3"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM8 17.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5zM9.5 8c0-1.38 1.12-2.5 2.5-2.5s2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5S9.5 9.38 9.5 8zm6.5 9.5c-1.38 0-2.5-1.12-2.5-2.5s1.12-2.5 2.5-2.5 2.5 1.12 2.5 2.5-1.12 2.5-2.5 2.5z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-9"
                  >
                    <span
                      class="makeStyles-logoText-117"
                      data-testid="brand"
                    >
                      Master
                    </span>
                  </div>
                </div>
              </a>
            </div>
            <div
              class="makeStyles-sidebarWrapper-129"
            >
              <nav
                class="MuiList-root MuiList-padding"
              >
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-126"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M3 13h8V3H3v10zm0 8h8v-6H3v6zm10 0h8V11h-8v10zm0-18v6h8V3h-8z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-130 MuiTypography-body1"
                      data-testid="menu-dashboard"
                    >
                      Dashboard
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-133"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-126"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-130 MuiTypography-body1"
                      data-testid="menu-products"
                    >
                      Products
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-133"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-126"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-130 MuiTypography-body1"
                      data-testid="menu-shop"
                    >
                      Shop
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-133"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-126"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M22 13h-8v-2h8v2zm0-6h-8v2h8V7zm-8 10h8v-2h-8v2zm-2-8v6c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V9c0-1.1.9-2 2-2h6c1.1 0 2 .9 2 2zm-1.5 6l-2.25-3-1.75 2.26-1.25-1.51L3.5 15h7z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-130 MuiTypography-body1"
                      data-testid="menu-pages"
                    >
                      Pages
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-133"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-126"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M10 17l5-5-5-5v10z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-130 MuiTypography-body1"
                      data-testid="menu-users"
                    >
                      Users
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-133"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
                <div
                  aria-disabled="false"
                  class="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button"
                  role="button"
                  tabindex="0"
                >
                  <div
                    class="MuiListItemIcon-root makeStyles-itemIcon-126"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16.01 7L16 3h-2v4h-4V3H8v4h-.01C7 6.99 6 7.99 6 8.99v5.49L9.5 18v3h5v-3l3.5-3.51v-5.5c0-1-1-2-1.99-1.99z"
                      />
                    </svg>
                  </div>
                  <div
                    class="MuiListItemText-root"
                  >
                    <p
                      class="MuiTypography-root makeStyles-listItem-130 MuiTypography-body1"
                      data-testid="menu-plugins"
                    >
                      Plugins
                    </p>
                  </div>
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root makeStyles-itemCaret-133"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </div>
              </nav>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="makeStyles-mainPanel-110"
    >
      <header
        class="MuiPaper-root MuiAppBar-root MuiAppBar-positionFixed MuiAppBar-colorPrimary makeStyles-appBar-149 mui-fixed MuiPaper-elevation4"
      >
        <div
          class="MuiToolbar-root MuiToolbar-regular makeStyles-container-150 MuiToolbar-gutters"
        >
          <div
            class="makeStyles-flex-151"
          >
            <h1
              class="MuiTypography-root makeStyles-title-152 MuiTypography-h1 MuiTypography-colorInherit"
            />
          </div>
          <div
            class="PrivateHiddenCss-smDown-139"
          >
            <button
              class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-153"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <div
                  class="MuiAvatar-root MuiAvatar-circular makeStyles-avatarButton-154"
                >
                  <img
                    alt="Yo"
                    class="MuiAvatar-img"
                    src="/broken-image.jpg"
                  />
                </div>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="PrivateHiddenCss-mdUp-141"
          >
            <button
              aria-label="open drawer"
              class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiIconButton-label"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"
                  />
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </header>
      <div
        class="makeStyles-content-111"
      >
        <div
          class="makeStyles-container-112"
        >
          <div
            class="makeStyles-content-111"
          >
            <div
              class="makeStyles-container-112"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
